--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
                   <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
                   <li class="nav-item"><a class="nav-link" href="/awards">Awards</a></li>
                   <li class="nav-item"><a class="nav-link" href="/publish">Publish</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/call">Join Call</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/call">Call</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto mt-2">
                   <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
