--- a/templates/register.html
+++ b/templates/register.html
@@ -18,12 +18,12 @@
         <div class="d-flex flex-row justify-content-center">
             <div class="p-2">
                 Expert
-                    <input type="radio" name="role" value="expert">
+                    <input type="radio" name="role" value="Expert">
                     <br>
             </div>
             <div class="p-2">
                 Learner
-                    <input type="radio" name="role" value="learner">
+                    <input type="radio" name="role" value="Learner">
                     <br>
             </div>
         </div>
@@ -31,7 +31,7 @@
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Check password" type="password">
+            <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Re-enter Password" type="password">
         </div>
         <div class="text-center">
             <button class="btn btn-primary" type="submit">Register</button>
