--- a/static/styles.css
+++ b/static/styles.css
@@ -2,3 +2,53 @@
     width: 280px;
     height: 70px;
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+video {
+    transform: scaleX(-1);
+  }
+
+.box {
+    background: #587b9f;
+	border-radius: 25px;
+    width:400px;
+	height:400px;
+	margin: auto;
+	padding:10px;
+    margin-top: 4rem;
+}
+
+#room-name-form {
+    margin: 3rem;
+    text-align: center;
+}
+  
+  #video-container video {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 300px;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+  }
+  
+  #participantName {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: white;
+    background-color: rgba(33, 37, 41, 0.5);
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+  }
+
+#participantName:hover {
+    opacity: 1;
+    user-select: none;
+}
