--- a/static/styles.css
+++ b/static/styles.css
@@ -26,29 +26,40 @@ video {
     margin: 3rem;
     text-align: center;
 }
+
+#video-container {
+    text-align: center;
+}
   
-  #video-container video {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    height: 300px;
-    margin-bottom: 1rem;
-    margin-right: 1rem;
-  }
-  
-  #participantName {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    color: white;
-    background-color: rgba(33, 37, 41, 0.5);
-    padding: 5px;
-    border-radius: 5px;
-    margin-bottom: 1rem;
-    margin-right: 1rem;
-  }
+#video-container video {
+bottom: 0;
+right: 0;
+height: 89.5%;
+width: 950px;
+}
+
+#participantName {
+position: absolute;
+bottom: 10px;
+right: 10px;
+color: white;
+background-color: rgba(33, 37, 41, 0.5);
+padding: 5px;
+border-radius: 5px;
+margin-bottom: 1rem;
+margin-right: 1rem;
+}
 
 #participantName:hover {
     opacity: 1;
     user-select: none;
+}
+
+.participant-2-div{
+    width: 700px;
+	height:200px;
+    position: fixed;
+    bottom: 0px;
+    right: 10px;
+    border-radius: 10%;
 }
