added category column to room list initialized guides

--- a/templates/room_list.html
+++ b/templates/room_list.html
@@ -26,8 +26,9 @@
         <thead class="thead-dark">
         <tr>
             <th scope="col">Expert</th>
+            <th scope="col">Topic</th>
             <th scope="col">Room Name</th>
-            <th scope="col">Elapsed time (maybe)</th>
+            <th scope="col">Elapsed Time</th>
         </tr>
         </thead>
         <tbody>
@@ -35,6 +36,9 @@
                 <tr>
                     <td>
                         {{ room["host_name"] }}
+                    </td>
+                    <td>
+                        configure topic
                     </td>
                     <td>
                         {{ room["room_name"] }}
