--- a/templates/room_list.html
+++ b/templates/room_list.html
@@ -19,9 +19,12 @@
     </div>
   </div>
 
-<div id="video-container"> </div>
+<div id="video-container"> 
+    <button class="btn bg-danger" id="disconnect-button">Disconnect</button>
+    <button class="btn bg-info" id="audio-button">Mute Audio</button>
+    <button class="btn bg-info" id="video-button">Mute Video</button>
+</div>
 <script src="static/main.js"></script>
-
 <div id="myTableDiv">
     <table id="myTable" class="table table-borderless">
         <thead class="thead-dark">
