--- a/templates/room_list.html
+++ b/templates/room_list.html
@@ -20,9 +20,17 @@
   </div>
 
 <div id="video-container"> 
-    <button class="btn bg-danger" id="disconnect-button">Disconnect</button>
-    <button class="btn bg-info" id="audio-button">Mute Audio</button>
-    <button class="btn bg-info" id="video-button">Mute Video</button>
+    <div id="utility-buttons">
+        <button class="btn bg-danger" id="disconnect-button">
+            <img id="endcall-button-img" src="static/end-call.png">
+        </button>
+        <button class="btn bg-info" id="audio-button">
+            <img id="audio-button-img" src="static/mute-audio.png">
+        </button>
+        <button class="btn bg-info" id="video-button">
+            <img id="video-button-img" src="static/mute-video.png">
+        </button>
+    </div>
 </div>
 <script src="static/main.js"></script>
 <div id="myTableDiv">
