--- a/static/styles.css
+++ b/static/styles.css
@@ -62,10 +62,15 @@ margin-right: 1rem;
     bottom: 0px;
     right: 10px;
     border-radius: 10%;
+    z-index: 3;
 }
 
 #utility-buttons {
     display: none;
+    position: fixed;
+    bottom: 20px;
+    left: calc(50vw - 100px);
+    z-index: 2;
 }
 
 #audio-button-img {
