--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,6 +36,7 @@
                 <ul class="navbar-nav me-auto mt-2">
                   <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
                   <li class="nav-item"><a class="nav-link" href="/awards">Awards</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/guides">Guides</a></li>
                   <li class="nav-item"><a class="nav-link" href="/publish">Publish</a></li>
                   <li class="nav-item"><a class="nav-link" href="/call">Call</a></li>
                 </ul>
