--- a/static/styles.css
+++ b/static/styles.css
@@ -86,5 +86,11 @@ margin-right: 1rem;
 }
 
 .awards{
-    width: 150px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.myh2{
+    text-align: center;
+    margin-top: 50px;
 }
