added categories functionality

--- a/templates/room_list.html
+++ b/templates/room_list.html
@@ -50,7 +50,7 @@
                         {{ room["host_name"] }}
                     </td>
                     <td>
-                        configure topic
+                        {{ room["categories"] }}
                     </td>
                     <td>
                         {{ room["room_name"] }}
