--- a/static/styles.css
+++ b/static/styles.css
@@ -95,6 +95,7 @@ margin-right: 1rem;
     margin-top: 50px;
 }
 
-.navbar.navbar-expand-lg.navbar-light {
-    background-color: blue; /* Change to your desired color */
+.darken-btn {
+    background-color: #2d5278 !important; /* Change to your desired dark color */
+    color: white !important; /* Change to your desired text color */
 }
