--- a/templates/login.html
+++ b/templates/login.html
@@ -5,15 +5,17 @@
 {% endblock %}
 
 {% block main %}
-<form action="/login" method="post">
-    <div class="mb-3 mt-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
-    </div>
-    <div class="mb-3">
-        <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
-    </div>
-    <div class="text-center">
-        <button class="btn btn-primary" type="submit">Log In</button>
-    </div>
-</form>
+<div class="webpagerego">
+        <form action="/login" method="post" class="box_s1">
+            <div class="mb-3 mt-3">
+                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+            </div>
+            <div class="mb-3">
+                <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
+            </div>
+            <div class="text-center">
+                <button class="button_s" type="submit">log in</button>
+            </div>
+        </form>
+</div>
 {% endblock %}
