--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,8 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/register" method="post">
+<div class="webpagerego">
+    <form action="/register" method="post" class="box_s1">
         <div class="mb-3 mt-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
@@ -37,4 +38,5 @@
             <button class="btn btn-primary" type="submit">Register</button>
         </div>
     </form>
+</div>
 {% endblock %}
