--- a/templates/landing.html
+++ b/templates/landing.html
@@ -21,10 +21,12 @@
     <body>
 
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-dark navbar-custom nav-fill w-100">
         <div class="container d-flex justify-content-between">
           <div>
-            <a class="navbar-brand" href="/"><img src="static/icon.png" class="img-fluid nav-icon"></a>
+            <a class="navbar-brand" href="/">
+              <img src="static/Vector.png" class="img-fluid nav-icon" style="width: 80%; height:80%"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,8 +47,12 @@
                 </ul>
                 {% else %}
                 <ul class="navbar-nav ms-auto mt-2">
-                  <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                  <li class="nav-item">
+                    <a class="nav-link register" href="/register" style="color: #85B7CC;">
+                      Register
+                    </a>
+                  </li>
+                  <li class="nav-item"><a class="nav-link login" href="/login">Log In</a></li>
                 </ul>
                 {% endif %}
               </div>
