--- a/templates/login.html
+++ b/templates/login.html
@@ -8,10 +8,10 @@
 <div class="webpagerego">
         <form action="/login" method="post" class="box_s1">
             <div class="mb-3 mt-3">
-                <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+                <input required autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
             </div>
             <div class="mb-3">
-                <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
+                <input required class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
             </div>
             <div class="text-center">
                 <button class="button_s" type="submit">log in</button>
