--- a/templates/register.html
+++ b/templates/register.html
@@ -8,13 +8,13 @@
 <div class="webpagerego">
     <form action="/register" method="post" class="box_s1">
         <div class="mb-3 mt-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+            <input required autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="email" name="email" placeholder="Email">
+            <input required class="form-control mx-auto w-auto" id="email" name="email" placeholder="Email">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="gender" name="gender" placeholder="Gender">
+            <input required class="form-control mx-auto w-auto" id="gender" name="gender" placeholder="Gender">
         </div>
         <div class="d-flex flex-row justify-content-center">
             <div class="p-2">
@@ -29,10 +29,10 @@
             </div>
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
+            <input required class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Re-enter Password" type="password">
+            <input required class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Re-enter Password" type="password">
         </div>
         <div class="text-center">
             <button class="btn btn-primary" type="submit">Register</button>
