--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -5,6 +5,12 @@
 {% endblock %}
 
 {% block main %}
+<div class="header">
+  <h1>
+      <b>points leaderboard</b>
+  </h1>
+  <p>Points are gained by learners and experts by writing guides, joining sessions, and helping others.</p>
+</div>
 <table class="table">
     <thead>
       <tr>
