--- a/templates/landing.html
+++ b/templates/landing.html
@@ -66,8 +66,8 @@
         <div class="container">
         <!-- Page contents -->
             <div id="welcome-container" style="height: 500px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                <div id="welcome-text" class="hidden">
-                    <h1>Wisdom Link</h1>
+                <div id="welcome-text" class="hidden header">
+                    <h1 class="highlight" style="font-size: 120px; font-family: helvetica; font-weight: 900;">wisdomlink</h1>
                     <p>take learning beyond the textbook.</p>
                 </div>
             </div>
