landing page modifications and style changes

--- a/static/styles.css
+++ b/static/styles.css
@@ -210,7 +210,7 @@ textarea {
   }
 
 .navbar-custom{
-    background-color: #85B7CC;
+    background-color: #405E79;
 }
 
 .register{
@@ -232,3 +232,4 @@ textarea {
     background-color: #2d5278 !important; /* Change to your desired dark color */
     color: white !important; /* Change to your desired text color */
 }
+
