--- a/templates/register.html
+++ b/templates/register.html
@@ -35,7 +35,7 @@
             <input required class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Re-enter Password" type="password">
         </div>
         <div class="text-center">
-            <button class="btn btn-primary" type="submit">Register</button>
+            <button class="button_s" type="submit">Register</button>
         </div>
     </form>
 </div>
