--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,11 +35,11 @@
               <div class="navbar-nav">
                 {% if session["user_id"] %}
                 <ul class="navbar-nav me-auto mt-2">
-                  <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/awards">Awards</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/call">Call</a></li>
                   <li class="nav-item"><a class="nav-link" href="/guides">Guides</a></li>
                   <li class="nav-item"><a class="nav-link" href="/publish">Publish</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/call">Call</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/awards">Awards</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto mt-2">
                   <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
@@ -47,7 +47,7 @@
                 {% else %}
                 <ul class="navbar-nav ms-auto mt-2">
                   <li class="nav-item">
-                    <a class="nav-link register" href="/register" style="color: #85B7CC;">
+                    <a class="nav-link register" href="/register" style="color: #405E79;">
                       Register
                     </a>
                   </li>
