--- a/templates/landing.html
+++ b/templates/landing.html
@@ -160,26 +160,29 @@
                         left: 0%;
                     }
                 }
+                .loading {
+                    display: none;
+                }
             </style>
         </div>
 
         <div class="scroll-parent">
             <div class="scroll-element primary">
-                <img src="static/scroll/img1.jpg" style="width: 300px; height: 200px; padding-left: 30px;">
-                <img src="static/scroll/img2.jpg" style="width: 300px; height: 200px; padding-left: 30px;">
-                <img src="static/scroll/img3.jpg" style="width: 300px; height: 200px; padding-left: 30px;">
-                <img src="static/scroll/img4.jpg" style="width: 300px; height: 200px; padding-left: 30px;">
-                <img src="static/scroll/img5.jpg" style="width: 220px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img1.jpg" class="loading" style="width: 300px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img2.jpg" class="loading" style="width: 300px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img3.jpg" class="loading" style="width: 300px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img4.jpg" class="loading" style="width: 300px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img5.jpg" class="loading" style="width: 220px; height: 200px; padding-left: 30px;">
             </div>
             <div class="scroll-element secondary">
-                <img src="static/scroll/img1.jpg" style="width: 300px; height: 200px; padding-left: 30px;">
-                <img src="static/scroll/img2.jpg" style="width: 300px; height: 200px; padding-left: 30px;">
-                <img src="static/scroll/img3.jpg" style="width: 300px; height: 200px; padding-left: 30px;">
-                <img src="static/scroll/img4.jpg" style="width: 300px; height: 200px; padding-left: 30px;">
-                <img src="static/scroll/img5.jpg" style="width: 220px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img1.jpg" class="loading" style="width: 300px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img2.jpg" class="loading" style="width: 300px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img3.jpg" class="loading" style="width: 300px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img4.jpg" class="loading" style="width: 300px; height: 200px; padding-left: 30px;">
+                <img src="static/scroll/img5.jpg" class="loading" style="width: 220px; height: 200px; padding-left: 30px;">
             </div>
-      
         </div>
+        
         <style>
             .gradient-container {
                 position: fixed;
@@ -200,6 +203,20 @@
                     background: linear-gradient(to bottom right, #87CEEB, white);
                 }
             }
+
+            .fade-in-image {
+                animation: fadeInImage 1s ease forwards;
+                opacity: 0;
+            }
+
+            @keyframes fadeInImage {
+                from {
+                    opacity: 0;
+                }
+                to {
+                    opacity: 1;
+                }
+            }
         </style>
         <script>
             document.addEventListener("DOMContentLoaded", function () {
@@ -207,6 +224,21 @@
                 const gradientContainer = document.querySelector(".gradient-container");
                 gradientContainer.classList.add("animate");
             });
+
+            document.addEventListener("DOMContentLoaded", function () {
+            const images = document.querySelectorAll(".loading");
+            
+            // Function to remove loading class
+            function removeLoadingClass() {
+                images.forEach(image => {
+                    image.classList.remove("loading");
+                    image.classList.add("fade-in-image");
+                });
+            }
+            
+            // Remove loading class after 3 seconds
+            setTimeout(removeLoadingClass, 3000);
+    });
         </script>
     </body>
 </html>
