--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -9,7 +9,7 @@
   <h1>
       <b>points leaderboard</b>
   </h1>
-  <p>Points are gained by learners and experts by writing guides, joining sessions, and helping others.</p>
+  <p>points are gained by learners and experts by writing guides, joining sessions, and helping others.</p>
 </div>
 <table class="table">
     <thead>
