--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,14 +35,14 @@
               <div class="navbar-nav">
                 {% if session["user_id"] %}
                 <ul class="navbar-nav me-auto mt-2">
-                  <li class="nav-item"><a class="nav-link" href="/call">Call</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/guides">Guides</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/publish">Publish</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/leaderboard">Leaderboard</a></li>
-                  <li class="nav-item"><a class="nav-link" href="/awards">Awards</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/call">sessions</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/guides">guides</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/publish">publish</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/leaderboard">leaderboard</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/awards">milestones</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto mt-2">
-                  <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/logout">log out</a></li>
                 </ul>
                 {% else %}
                 <ul class="navbar-nav ms-auto mt-2">
