--- a/templates/room_list.html
+++ b/templates/room_list.html
@@ -7,17 +7,22 @@
 {% block main %}
 <script src="https://media.twiliocdn.com/sdk/js/video/releases/2.17.1/twilio-video.min.js"></script>
 
-<div class="container justify-content-center" id="container">
-    <div class="box" id="box">
+<div class="header">
+    <h1>
+        <b>join a session</b>
+    </h1>
+    <p>look for experts and learners to exchange knowledge with.</p>
+  </div>
+
+    <div class="box_s">
       <form id="room-name-form" method="post" action="/">
           <input name="room-name-input" id="room-name-input" class="input-group-text mx-auto p-2" placeholder="Create or join room">
           <br>
           <input name="username" id="username" class="input-group-text mx-auto p-2" placeholder="Username">
           <br>
-          <button type="submit" class="btn btn-primary">Join Room</button>
+          <button type="submit" class="button_s">Join Room</button>
       </form>
     </div>
-  </div>
 
 <div id="video-container"> 
     <div id="utility-buttons">
@@ -33,8 +38,9 @@
     </div>
 </div>
 <script src="static/main.js"></script>
-<div id="myTableDiv">
-    <table id="myTable" class="table table-borderless">
+
+<div class="container" id="myTableDiv" >
+    <table id="myTable" class="table table-borderless" style="color: #405E79">
         <thead class="thead-dark">
         <tr>
             <th scope="col">Expert</th>
