--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,5 +66,7 @@
         <!-- Page contents -->
         {% block main %}{% endblock %}
         </div>
+
+        {% block out_of_container %}{% endblock %}
     </body>
 </html>
