--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -11,12 +11,13 @@
   </h1>
   <p>points are gained by learners and experts by writing guides, joining sessions, and helping others.</p>
 </div>
-<table class="table">
+<div class="container">
+<table class="table" style="color: #405E79; margin-top: 30px;">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Points</th>
+        <th scope="col">user</th>
+        <th scope="col">points</th>
       </tr>
     </thead>
     <tbody>
@@ -31,4 +32,5 @@
         {% endfor %}
     </tbody>
   </table>
+</div>
 {% endblock %}
