--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,7 +25,7 @@
         <div class="container d-flex justify-content-between">
           <div>
             <a class="navbar-brand" href="/">
-              <img src="static/Vector.png" class="img-fluid nav-icon" style="width: 80%; height:80%"></a>
+              <img src="static/home.png" class="img-fluid nav-icon" style="width: 40%; height:40%"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
