--- a/templates/room_list.html
+++ b/templates/room_list.html
@@ -8,13 +8,15 @@
 <script src="https://media.twiliocdn.com/sdk/js/video/releases/2.17.1/twilio-video.min.js"></script>
 
 <div class="header">
-    <h1>
-        <b>join a session</b>
-    </h1>
-    <p>look for experts and learners to exchange knowledge with.</p>
+    <div id="writing">
+        <h1>
+            <b>join a session</b>
+        </h1>
+        <p>look for experts and learners to exchange knowledge with.</p>
+    </div>
   </div>
 
-    <div class="box_s">
+    <div class="box_s" id="box">
       <form id="room-name-form" method="post" action="/">
           <input name="room-name-input" id="room-name-input" class="input-group-text mx-auto p-2" placeholder="Create or join room">
           <br>
