--- a/templates/publish.html
+++ b/templates/publish.html
@@ -9,7 +9,7 @@
     <h1>
         <b>create guide</b>
     </h1>
-    <p>publish your findings and insights and guides to help others.</p>
+    <p>publish your findings and insights in guides to help others.</p>
 </div>
 <div class="box_s" style="width: 100cap;">
     <form action="/publish" method="post">
