--- a/static/styles.css
+++ b/static/styles.css
@@ -188,9 +188,10 @@ margin-right: 1rem;
     margin-top: 30px;
 }
 
-.myh2{
+.header h1{
     text-align: center;
     margin-top: 50px;
+    font-family:"Helvetica Neue", Courier, sans-serif;
 }
 
 .webpage{
