Aesthetic changes for awards

--- a/templates/awards.html
+++ b/templates/awards.html
@@ -13,8 +13,8 @@
 </div>
 
     <div class="container awards header">
-        <div class="row">
-            <div class="box_s col-md-3" id=boxx>
+        <div class="row" style="margin-left: 50px;">
+            <div class="box_s col-md-3" id=boxx style="width: 22%; height: 20%;">
                 <img src="static/award-grey.png" id="award1" style="margin-bottom: 20px;">
                 <p style="text-align: center;">
                     Earn 100 points by Hosting a call, Answering a call, or Publishing
@@ -23,7 +23,7 @@
                     <b>descartes</b>
                 </h1>
             </div>
-            <div class="box_s col-md-3" id=boxx>
+            <div class="box_s col-md-3" id=boxx style="width: 22%; height: 20%;">
                 <img src="static/award-grey.png" id="award2" style="margin-bottom: 20px;">
                 <p style="text-align: center;">
                     Earn 200 points by Hosting a call, Answering a call, or Publishing
@@ -32,7 +32,7 @@
                     <b>pascal</b>
                 </h1>
             </div>
-            <div class="box_s col-md-3" id=boxx>
+            <div class="box_s col-md-3" id=boxx style="width: 22%; height: 20%;">
                 <img src="static/award-grey.png" id="award3" style="margin-bottom: 20px;">
                 <p style="text-align: center;">
                     Earn 300 points by Hosting a call, Answering a call, or Publishing
@@ -41,7 +41,7 @@
                     <b>plato</b>   
                 </h1>
             </div>
-            <div class="box_s col-md-3" id=boxx>
+            <div class="box_s col-md-3" id=boxx style="width: 22%; height: 20%;">
                 <img src="static/award-grey.png" id="award4" style="margin-bottom: 20px;">
                 <p style="text-align: center;">
                     Earn 400 points by Hosting a call, Answering a call, or Publishing
