--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -12,7 +12,8 @@
   <p>points are gained by learners and experts by writing guides, joining sessions, and helping others.</p>
 </div>
 <div class="container">
-<table class="table" style="color: #405E79; margin-top: 30px;">
+  <div class="box_s">
+<table class="table" style="color: #405E79; margin-top: 15px;">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -32,5 +33,6 @@
         {% endfor %}
     </tbody>
   </table>
-
+</div>
+</div>
 {% endblock %}
