--- a/templates/room_list.html
+++ b/templates/room_list.html
@@ -41,7 +41,7 @@
 </div>
 <script src="static/main.js"></script>
 
-<div class="container" id="myTableDiv" >
+<div class="box_s" id="myTableDiv" >
     <table id="myTable" class="table table-borderless" style="color: #405E79">
         <thead class="thead-dark">
         <tr>
