awards cosmetic change

--- a/templates/awards.html
+++ b/templates/awards.html
@@ -103,7 +103,7 @@
 
         document.addEventListener("DOMContentLoaded", function () {
         var resultElement = document.getElementById("myh2");
-        resultElement.innerHTML = "Your current points: " + curr_points;
+        resultElement.innerHTML = "your current points: " + curr_points;
     });
 
 
